prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: jungschi
  name: router
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/common-name: app.jungscharluzern.ch
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.jungscharluzern.ch
      secretName: jungschi-prod-tls
  rules:
    - host: app.jungscharluzern.ch
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: jungschi-back
                port:
                  number: 8080
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jungschi-ui
                port:
                  number: 8080
